--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,4 @@
 NODE_PATH=src/
+REACT_APP_ACCESS_CONTROL='http://localhost'
+REACT_APP_BASE_URL='http://localhost:3001'
+REACT_APP_TOKEN='access_token'
