--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,23 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "author": "Wylkon Cardoso",
   "dependencies": {
+    "axios": "^0.18.0",
+    "boxicons": "^1.9.1",
+    "polished": "^3.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.5"
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
+    "lint": "eslint ./src",
+    "lint:fix": "yarn lint --fix",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -16,10 +27,27 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn lint"
+    }
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-jest": "^22.3.0",
+    "eslint-plugin-react": "^7.12.4",
+    "husky": "^1.3.1",
+    "jest-dom": "^3.1.2",
+    "jest-styled-components": "^6.3.1",
+    "react-testing-library": "^6.0.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6"
+  }
 }
