--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "boxicons": "^1.9.1",
+    "final-form": "^4.12.0",
     "polished": "^3.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-final-form": "^4.1.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
