--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "boxicons": "^1.9.1",
     "final-form": "^4.12.0",
+    "lodash": "^4.17.11",
     "polished": "^3.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
